# DealFlow_VC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_multi_format.py
.claude/: settings.local.json
.claude/agents/: Finance-UIUX-Design-Agent.md
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  analysis_agent.py  base.py  extraction_agent.py  orchestrator.py  risk_agent.py  simple_orchestrator.py  valuation_agent.py
app/api/: __init__.py  analytics.py  auth.py  chat.py  comparison.py  confidence.py  deals.py  export.py  health.py  pipeline.py  simple_deals.py
app/core/: __init__.py  gemini_client.py
app/database/: __init__.py  crud.py  models.py  session.py
app/integrations/: __init__.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/models/: __init__.py  quick_schema.py  schemas.py  simple_output.py
app/services/: __init__.py  cache_service.py  document_service.py  multi_file_processor.py  redis_cache.py
app/utils/: __init__.py  exceptions.py  logger.py
dealflow-ui/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
dealflow-ui/src/app/: globals.css  layout.tsx  page.tsx
dealflow-ui/src/app/chat/: page.tsx
dealflow-ui/src/app/compare/: page.tsx
dealflow-ui/src/app/deals/: page.tsx
dealflow-ui/src/app/login/: page.tsx
dealflow-ui/src/app/pipeline/: page.tsx
dealflow-ui/src/app/register/: page.tsx
dealflow-ui/src/app/settings/: page.tsx
dealflow-ui/src/components/: AnalysisProgress.tsx  ClientLayout.tsx  ErrorBoundary.tsx  FileUpload.tsx  RecommendationBadge.tsx  ScoreGauge.tsx  Sidebar.tsx  StatCard.tsx
dealflow-ui/src/contexts/: AuthContext.tsx
dealflow-ui/src/types/: index.ts
docs/: architecture.md
frontend/: app.py  requirements.txt  run.py  simple_app.py
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  progress.py  results.py  upload.py
frontend/utils/: __init__.py  api_client.py  styling.py
prompts/: .gitkeep  __init__.py  analysis_prompts.py  extraction_prompts.py  risk_prompts.py  valuation_prompts.py
scripts/: seed_data.py  test_setup.py
tests/: __init__.py  conftest.py  test_auth.py  test_chat.py  test_deals.py  test_gemini_client.py  test_health.py  test_integration.py  test_models.py  test_pipeline.py
